# VJ_CP3

./: README.md  basic.cpp  f_to_c.cpp  jnfdsojgnfds  main.py
Appsec/: main.py
CPP/Dessert/: dessert.py  shop.py  test_dessert.py
CPP/Dyn_arr/: main.cpp
CPP/FLTK/: main.cpp
CPP/Hgh_scr/: scores.csv
CPP/LOGIN/: main.cpp
CPP/Notes/: arrays.cpp  basic.cpp  data.csv  enumer.cpp  example.cpp  people.txt  sort.cpp  strings.cpp  structures.cpp
CPP/Poke/: pokee.csv
CPP/Shop_pt2/: shop.py  test_dessert.py
CPP/TAC_TOE/: main.cpp
Calc/: main.cpp
Chess/: pieces.py  play.py
Dessert/: dessert.py  shop.py
FLTK/: main.cpp
Hgh_scr/: main.cpp  scores.csv
LOGIN/: main.cpp
LOGIN_2/: main.cpp
MOVIE/: main.cpp  movies.csv
MyQtApp/: CMakeLists.txt
Notes/: Basics.txt  Variables.txt  arrays.cpp  binaries_l.cpp  chng_str.cpp  enumer.cpp  pointers.cpp  strings.cpp  tep.txt  txt.cpp
Poke/: battle.cpp  battle.h  choose.cpp  main.cpp  pokee.csv
Poke_High/: battle.cpp  choose.cpp  pokee.csv  scores.csv
Py/Chess/: pieces.py  play.py
Py/Py_notes/: p_notes.py
Py/Quiz/: main.py  questions1.csv  scores.csv
Py_notes/: Prnt_chld_clss.py  absrtc.py  classes.py
Py_notes/Clss/: main.py  test_main.py
Quiz/: main.py  questions1.csv
Shop_pt2/: dessert.py  shop.py
Student_class/: main.py
TAC_TOE/: main.cpp
grav/: main.py
